# agent

./: .gitignore  AGENTS.md  BUILD.md  CLI.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  SPEC.md  SUMMARY.md  TRAINING.md  agent.toml  agi  build.sh  cli.py  progress.md  training_script.py
src/: main.rs
src/agent/: llm.rs  mod.rs  reasoning.rs  session.rs  session_store.rs  team.rs
src/api/: chat.rs  knowledge.rs  memory.rs  mod.rs  models.rs  services.rs  sessions.rs  training.rs
src/cli/: chat.rs  mod.rs  training.rs
src/config/: mod.rs
src/knowledge/: arxiv.rs  fetch.rs  mod.rs  wikipedia.rs
src/memory/: embedding.rs  eviction.rs  mod.rs  retrieval.rs  store.rs
src/models/: mod.rs
src/services/: batch_training.rs  curiosity.rs  memory_eviction.rs  mod.rs  online_learning.rs  scheduler.rs  search_learning.rs  self_improve.rs  session_review.rs  theory_of_mind.rs
src/tools/: bash.rs  fetch.rs  image.rs  impls.rs  mod.rs  read.rs  search.rs  write.rs
src/training/: mod.rs
